fix: favicon title and description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>PatientFolio</title>
+    <meta name="description" content="Maneja el estado de tus pacientes de manera eficiente y rapida">
+    <meta name="keywords" content="Sistema de gestion 1, Medicina, Gestionar pacientes">
+    <meta name="author" content="Juan Rigual">
   </head>
   <body>
     <div id="root"></div>
